fix gap between header and main content on devices with a width less than 576px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ main {
     display: flex;
     flex: 1 0 auto;
     flex-direction: column;
-    margin-top: 26vh;
+    margin-top: 25vh;
     background: url(../images/index.html-images/pexels-life-of-pix-8892.jpg) no-repeat center center/cover;
 }
 
